# fs-pro-rust

./: Cargo.toml  README.md  TODO
.github/workflows/: rust.yml
fs_pro_macros/: Cargo.toml
fs_pro_macros/src/: lib.rs
src/: dir.rs  error.rs  file.rs  lib.rs  main.rs  path_stuff.rs  shape.rs
tests/: dir.rs  file.rs  shape.rs
